--- a/index.html
+++ b/index.html
@@ -12,42 +12,50 @@
 
         <!-- hlavička -->
 
+      <header class="hlavicka">
+
         <h1 class="titulek">Island</h1>
 
         <p class="perex">Když se řekne Island, spoustě lidem se jako první vybaví sníh a led. Sama jsem tam strávila téměř rok života a zem pokrytou sněhem a ledem jsem zažila jen jediný den. Jednou věcí si ale jistá jsem: že návštěva ostrova pod polárním kruhem je pro každého tak silným zážitkem, že se sem bude chtít vrátit.</p>
 
         <p class="autor">Jana Zcela Vymyšlená</p>
 
-
+      </header>
 
 
         <!-- menu -->
 
+      <div class="obsah">
+
         <ul class="menu">
-            <li><a href="#">Úvod</a></li>
-            <li><a href="#">Proč jet na Island</a></li>
-            <li><a href="#">Co musíte vidět</a></li>
-            <li><a href="#">Fotogalerie</a></li>
+            <li><a href="#uvod" class="uvod_menu">Úvod</a></li>
+            <li><a href="#proc" class= "proc_menu">Proč jet na Island</a></li>
+            <li><a href="#doporuceni" class="doporuceni_menu">Co musíte vidět</a></li>
+            <li><a href="#fotogalerie">Fotogalerie</a></li>
         </ul>
 
 
 
         <!-- sekce Úvod -->
 
+        <section class="uvod" id="uvod">
         <p>Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!</p>
 
         <p>Rád bych popsal některá místa, která prostě při návštěvě nemůžete vynechat. Není ani důvod, jejich dostupnost je výborná díky hlavní okružní cestě, po které pohodlně celý ostrov za několik dní objedete bez toho, abyste museli zajíždět do hůře dostupného vnitrozemí. I tam je samozřejmě spousta dech beroucích míst, ale za pár dní se stihnout bohužel vše nedá.</p>
 
         <p>Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.</p>
 
-
+        <div class="fotobox">
         <img src="images/island1.jpg" alt="Island">
         <p class="popisek">
             Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a>
         </p>
-
+      </div>
+      </section>
 
         <!-- sekce Proč -->
+
+        <section class="proc" id="proc">
 
         <h2>Proč jet na Island</h2>
 
@@ -57,14 +65,18 @@
 
         <p>Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip;</p>
 
-
+        <div class="fotobox">
         <img src="images/island2.jpg" alt="Island">
         <p class="popisek">
             Photo &copy; <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a>
         </p>
+        </div>
+      </section>
 
 
         <!-- sekce Co musíte vidět -->
+
+        <section class="doporuceni" id="doporuceni">
 
         <h2>Co musíte vidět</h2>
 
@@ -78,26 +90,31 @@
 
         <p><strong>Seljalandsfoss</strong> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.</p>
 
+        <div class="fotobox">
         <img src="images/island3.jpg" alt="Island">
         <p class="popisek">
             Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a>
         </p>
+        </div>
+      
 
 
         <!-- změna strany, aby to celé bylo hezčí :) -->
 
 		<p><strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.</p>
 
-		<p><strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.</p>
+    <p><strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.</p>
+      </section>
 
 
 
         <!-- sekce Fotogalerie -->
 
-		<h2>Fotogalerie</h2>
+        <section class="fotogalerie" id="fotogalerie">
 
-        <div class="galerie">
-
+    <h2>Fotogalerie</h2>
+    
+    <div class="galerie">
 			<div class="foto">
 				<img src="images/nahled1.jpg" alt="Myvatn Aurora">
 				<p class="popisek">
@@ -170,11 +187,17 @@
 				</p>
 			</div>
 
-		</div><!-- konec .galerie -->
+    </div>
 
+    </section>
+  
+  
 
+    <!-- konec .galerie -->
 
         <!-- patička -->
+
+        <footer class="paticka">
 
         <p>
             Texty převzaty z článků:<br>
@@ -184,7 +207,8 @@
         <p>
             Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a>
         </p>
-
+      </footer>
+</div>
 
     </body>
 </html>
